--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>troldspejet</title>
+		<link rel="icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" href="/vite.svg" sizes="180x180" />
+		<link rel="mask-icon" href="/vite.svg" color="#FFFFFF" />
+		<meta name="theme-color" content="#ffffff" />
 	</head>
 	<body>
 		<div id="root"></div>
